<resources>
    <string name="app_name">blooddonationapplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_header_button1">Login</string>
    <string name="nav_header_button2">Sign Up</string>
    <string name="nav_header_button3">Logout</string>

    <string name="menu_event">Event</string>
    <string name="user_menu_Notification">Notification</string>
    <string name="user_menu_myActivity">My Activity</string>
    <string name="user_menu_donor_chat">Real Time Chat</string>
    <string name="user_menu_donor_find_blood_drive">Find Blood Drive</string>
    <string name="user_menu_PointAndRedeem">Point And Redeem</string>
    <string name="user_menu_myAccount">My Account</string>
    <string name="user_menu_organizer_real_time_chat">Real Time Chat</string>
    <string name="btn_Register">Register</string>

    <!--Setting-->
    <string name="menu_setting_HelpAndFeedback">Help And Feedback</string>
    <string name="menu_setting_UserGuide">User Guide</string>
    <string name="menu_setting_AboutUs">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="reward">Point &amp; Reward</string>
    <string name="history">Reward History</string>
    <string name="cat">Category</string>
    <string name="name">Name: </string>
    <string name="currPoint">Your Current Point: </string>

    <string name="attend">Attendance</string>
    <string name="follow">Follow</string>
    <string name="achieve">Achievement</string>


    <string name="user_type"></string>
    <string name="blood_type"></string>
    <string name="gender"></string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="keyinUsername">Username/Email</string>
    <string name="keyinPassword">Password</string>
    <string name="linktoSigup">Don\'t have an account? Please Sigup Now.</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="keyinSignupUsername">Username</string>
    <string name="keyinSignupPassword">Password</string>
    <string name="keyinSignupEmail">Email</string>
    <string-array name="user_account">
        <item>Donor</item>
        <item>Organizer</item>
    </string-array>
    <string-array name="user_blood_type">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
        <item>No Idea</item>
    </string-array>
    <string-array name="user_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_prize_detail">PrizeDetailActivity</string>


    <!-- Organizer create event string name-->
    <string name="eventTitle">Event Title</string>
    <string name="eventNumOfParticipate">Number of Participate</string>
    <string name="eventFromDate">From Date</string>
    <string name="eventToDate">To Date</string>
    <string name="eventFromTime">From Time</string>
    <string name="eventToTime">To Time</string>
    <string name="eventAddress">Address</string>
    <string name="eventVenue">Venue</string>
    <string name="eventPoint">Point</string>
    <string name="eventDescription">Description</string>
    <string name="termAndCondition">Check here to indicate that you have read and agree to the terms of the Registration of Blood Donation Event </string>
    <string name="btnCreateEvent">Create Event</string>
    <string name="organizerCreateEvent">Create Event</string>
    <string name="btnUpdateEvent">Update Event</string>
    <string name="Upload">Upload</string>
    <string name="Title">Title</string>
    <string name="eventRegisterDateTime">Event Register Date Time</string>
    <string name="eventRegisterDateTimes">Register Date Time:</string>
    <string name="Today">Event on Today</string>
    <string name="organizerUpdateEvent">Update Event</string>
    <string name="btnDeleteEvent">Delete Event</string>
    <string name="btnGenerateAttendance">Generate Attendance</string>
    <string name="redeem">Redeem</string>
    <string name="line">-</string>


    <string name="lorem_ipsum">Hello World</string>
</resources>
