<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/def" android:visible="true">
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/menu_event" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/donor_navigate" android:visible="false">
        <item
            android:id="@+id/nav_user_activity"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/user_menu_myActivity" /> <!--Gallery, ic_menu_gallery-->
        <item
            android:id="@+id/nav_user_notification"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/user_menu_Notification" /> <!--Home, ic_menu_camera-->

        <item
            android:id="@+id/nav_find_blood_drive"
            android:icon="@drawable/ic_find_in_page_black_24dp"
            android:title="@string/user_menu_donor_find_blood_drive" />
        <item
            android:id="@+id/nav_donor_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/user_menu_donor_chat" />

        <item
            android:id="@+id/nav_user_account"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/user_menu_myAccount" /><!--slideshow, ic_menu_manage, menu_tools-->
    </group>

    <group android:checkableBehavior="single" android:id="@+id/organization_navigate" android:visible="false">
        <item
            android:id="@+id/nav_organizer_activity"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/user_menu_myActivity" />

        <item
            android:id="@+id/nav_organizer_notification"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/user_menu_Notification" />

        <item
            android:id="@+id/nav_organizer_real_time_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/user_menu_organizer_real_time_chat" />


    </group>

    <group android:checkableBehavior="single" android:id="@+id/menu_setting" android:visible="true" >
        <item
            android:id="@+id/menu_setting_HelpAndFeedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/menu_setting_HelpAndFeedback" />
        <item
            android:id="@+id/menu_setting_UserGuide"
            android:icon="@drawable/ic_menu_user_guide"
            android:title="@string/menu_setting_UserGuide" />
        <item
            android:id="@+id/menu_setting_AboutUs"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/menu_setting_AboutUs" />

    </group>


    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>-->

</menu>
