<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_event">

    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.blooddonationapplication.ui.donorEvent.EventFragment"
        android:label="Event" />

    <fragment
        android:id="@+id/nav_user_notification"
        android:name="com.example.blooddonationapplication.ui.donorNotification.UserNotificationFragment"
        android:label="@string/user_menu_Notification"
        tools:layout="@layout/fragment_user_notification" />

    <fragment
        android:id="@+id/nav_user_account"
        android:name="com.example.blooddonationapplication.ui.donorAccount.UserAccountFragment"
        android:label="@string/user_menu_myAccount"
        tools:layout="@layout/fragment_user_my_account" />

    <fragment
        android:id="@+id/nav_user_activity"
        android:name="com.example.blooddonationapplication.ui.donorActivity.UserActivityFragment"
        android:label="@string/user_menu_myActivity" />


    <!--Organization menu-->

    <fragment
        android:id="@+id/nav_organizer_notification"
        android:name="com.example.blooddonationapplication.ui.organizerNotification.OrganizerNotificationFragment"
        android:label="@string/user_menu_Notification"
        tools:layout="@layout/fragment_organization_notification" />

    <fragment
        android:id="@+id/nav_organizer_activity"
        android:name="com.example.blooddonationapplication.ui.organizerEvent.OrganizerActivityFragment"
        android:label="@string/user_menu_myActivity" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.blooddonationapplication.ui.donorChat.ChatFragment"
        android:label="@string/user_menu_donor_chat" />
    <fragment
        android:id="@+id/nav_find_blood_drive"
        android:name="com.example.blooddonationapplication.ui.find_blood_drive.FindBloodDrive"
        android:label="@string/user_menu_donor_find_blood_drive"
        tools:layout="@layout/fragment_find_blood_drive" />
</navigation>