<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="#ffe9ec"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="160dp"
        android:orientation="horizontal"
        android:layout_height="35dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:onClick="Login"
            android:text="@string/nav_header_button1" />
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/nav_header_button2"
            android:onClick="signUp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/nav_header_button3"
            android:onClick="Logout"
            android:layout_marginLeft="42dp"
            android:layout_gravity="center"/>

    </LinearLayout>


    <TextView
        android:id="@+id/nav_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000000" />

</LinearLayout>
