<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/profileImg"
                app:layout_constraintTop_toTopOf="@+id/profileImg" />

            <TextView
                android:id="@+id/txtPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/currPoint"
                app:layout_constraintStart_toStartOf="@+id/txtName"
                app:layout_constraintTop_toBottomOf="@+id/txtName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary">

                <com.google.android.material.tabs.TabItem
                    android:text="@string/achieve"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <com.google.android.material.tabs.TabItem
                    android:text="@string/follow"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <com.google.android.material.tabs.TabItem
                    android:text="@string/attend"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

            </com.google.android.material.tabs.TabLayout>

        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat >